--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "mcjspacker-vscode",
 	"displayName": "mcjspacker-vscode",
 	"description": "VSCode support for mcjspacker",
+	"repository": "https://github.com/InfiniteCoder01/mcjspacker-vscode.git",
+	"readme": "README.md",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.101.0"
@@ -12,7 +14,6 @@
 	"activationEvents": [
 		"onLanguage:javascript"
 	],
-	"main": "./out/extension.js",
 	"contributes": {
 		"grammars": [
 			{
