--- a/package.json
+++ b/package.json
@@ -26,7 +26,27 @@
 			}
 		]
 	},
+	"activationEvents": [
+		"onLanguage:javascript"
+	],
+	"main": "./out/extension.js",
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"lint": "eslint",
+		"watch": "tsc -watch -p ./"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.13.0",
+		"@stylistic/eslint-plugin": "^2.9.0",
+		"@types/node": "^20",
+		"@types/vscode": "^1.73.0",
+		"eslint": "^9.13.0",
+		"typescript": "^5.8.2",
+		"typescript-eslint": "^8.26.0"
+	},
 	"dependencies": {
-		"@vscode/vsce": "^3.6.0"
+		"@spyglassmc/mcfunction": "^0.2.34",
+		"regex": "^6.0.1"
 	}
 }
