--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,7 +14,7 @@ jobs:
       - run: npm install -g vsce
 
       - name: Package VS Code extension
-      - run: vsce package
+        run: vsce package
 
       - name: Create release
         uses: marvinpinto/action-automatic-releases@latest
