--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"repository": "https://github.com/InfiniteCoder01/mcjspacker-vscode.git",
 	"publisher": "InfiniteCoder",
 	"readme": "README.md",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"engines": {
 		"vscode": "^1.101.0"
 	},
@@ -31,7 +31,7 @@
 	],
 	"main": "./out/extension.js",
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
+		"vscode:prepublish": "bun run compile",
 		"compile": "tsc -p ./",
 		"lint": "eslint",
 		"watch": "tsc -watch -p ./"
@@ -46,7 +46,6 @@
 		"typescript-eslint": "^8.26.0"
 	},
 	"dependencies": {
-		"@spyglassmc/mcfunction": "^0.2.34",
 		"regex": "^6.0.1"
 	}
 }
